# VocalSieve

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  SECURITY.md  Start-VocalSieve.cmd  THIRD_PARTY_NOTICES.md  compose.yaml  filter_by_physics.py  filter_by_whisper.py  gui_main.py  main.py  openapi.json  pyproject.toml  requirements.txt  test_ctypes.py  test_env.py  web_api.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  gpu.yml  release.yml  security.yml  windows-package.yml
core_pipeline/: __init__.py  callbacks.py  environment.py  models.py  physics_filter.py  pipeline.py  utils.py  whisper_filter.py
docs/: API.md  BENCHMARK.md  CUDA.md  DEPENDENCIES.md  DOCKER.md  FFMPEG.md  FILTERING.md  NODE_LICENSES.md  PYTHON_LICENSES.md  RELEASE.md
packaging/: README-WINDOWS.txt  SIGNING.md  VocalSieve-Prerelease-CodeSigning.cer  VocalSieve.spec  ffmpeg-manifest.json  portable_entry.py
scripts/: benchmark_corpus.py  build_windows_portable.ps1  check_versions.py  export_openapi.py  fetch_ffmpeg_sources.ps1  generate_node_licenses.mjs  release_gate.ps1
src/vocalsieve/: __init__.py  api.py  api_app.py  api_auth.py  api_events.py  api_jobs.py  api_models.py  api_runtime.py  api_workers.py  audio.py  cli.py  database.py  doctor.py  domain.py  errors.py  events.py  exporter.py  logging_config.py  pipeline.py  rules.py  runtime.py  scanner.py  sdk.py  service.py  settings.py  transcription.py  tui.py
tests/: __init__.py  test_api.py  test_audio.py  test_benchmark.py  test_cli.py  test_database.py  test_doctor.py  test_domain.py  test_exporter.py  test_logging_config.py  test_pipeline.py  test_rules.py  test_runtime.py  test_scanner.py  test_sdk.py  test_service.py  test_transcription.py  test_tui.py
tests/fixtures/: __init__.py  audio_factory.py
ui/: app.js  index.html  style.css
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  styles.css
web/src/api/: client.ts  schema.d.ts
