[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "vocalsieve"
version = "0.9.0rc1"
description = "A local-first audio corpus screening workbench"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["audio", "speech", "whisper", "corpus", "dataset"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "faster-whisper>=1.1,<2",
    "librosa>=0.10,<1",
    "numpy>=1.24,<3",
    "platformdirs>=4,<5",
    "soundfile>=0.12,<1",
]

[project.optional-dependencies]
tui = ["textual>=1,<2"]
api = [
    "fastapi>=0.115,<1",
    "pydantic>=2.10,<3",
    "uvicorn[standard]>=0.34,<1",
]
dev = [
    "build>=1.2,<2",
    "httpx2>=2,<3",
    "pip-audit>=2.8,<3",
    "pip-licenses>=5,<6",
    "pre-commit>=4,<5",
    "pyinstaller>=6.16,<7",
    "pyright>=1.1.390,<2",
    "pytest>=9.0.3,<10",
    "pytest-cov>=6,<7",
    "ruff>=0.11,<1",
    "textual>=1,<2",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
]

[project.scripts]
vocalsieve = "vocalsieve.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["vocalsieve*"]

[tool.setuptools.package-data]
vocalsieve = ["py.typed", "assets/*.wav"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["vocalsieve"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "RUF001"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
